# MORPHY

./: .gitignore  Makefile  README  README.md  install.sh
data/inputusertrees/: bootstrap1000_55  bootstrap100_M510
data/model/: 186.model  218.model  500.model  55.model  M2926.model  M510.model
data/sequences/: 186.txt  218.txt  500.txt  55.txt  M2926.clu  M510.clu
lib/Bpp/bpp-core-2.1.0/: Doxyfile-build
lib/Bpp/bpp-phyl-2.1.0/: CMakeLists.txt  make.out  messages.txt  out  profile.txt
lib/Bpp/bpp-seq-2.1.0/: .exrc  Doxyfile-build
lib/Pll/: ChangeLog  Makefile.am  Makefile.in  config.h  configure.ac
lib/Pll/MPI/: Makefile.am
lib/Pll/autom4te.cache/: output.0  requests  traces.0  traces.1
lib/Pll/dox/: doxygen_rearrange.py  header2.html  nni.tex  nni1.tex  nni2.tex  nni3.tex  node.tex  pll.css  pll.eps  spr1.tex  spr2.tex  spr3.tex  spr4.tex  spr5.tex
lib/Pll/examples/: Makefile  Makefile.am  Makefile.in  README
lib/Pll/examples/PLL/: Makefile  Makefile.ALL  Makefile.ARM  Makefile.AVX  Makefile.AVX-PTHREADS  Makefile.AVX.clang  Makefile.AVX.shared  Makefile.MIC-PTHREADS  Makefile.SSE3-MPI  Makefile.SSE3.clang  Makefile.SSE3.mac  Makefile.am  Makefile.in  Makefile2  Makefile~  main.c~  test.cpp  tiny.aa.model2  tiny_aa_tree.txt
lib/Pll/legacy/: axml.c  old_code.c  old_code.h
lib/Pll/man/: Makefile.am
lib/Pll/sMSA/: BoostRandomGenerator.h  EvaluationObj.cpp  EvaluationObj.h  F84Model.cpp  F84Model.h  FIDModel.cpp  FIDModel.h  GTRModel.cpp  GTRModel.h  Makefile_sMSA  Mappings.h  Menus.cpp  Menus.h  PairAligner.cpp  PairAligner.h  PairInitializer.cpp  PairInitializer.h  Parameters.cpp  Parameters.h  ProbabilityObject.cpp  ProbabilityObject.h  SequenceAligner.cpp  SequenceAligner.h  Sequences.cpp  Sequences.h  TN93Model.cpp  TN93Model.h  Tree.cpp  Tree.h  TripleAligner.cpp  TripleAligner.h  TripleInitializer.cpp  TripleInitializer.h  Triplet.cpp  Triplet.h  TypeDefinitions.h  Utils.h  main.cpp  matrix_exponential.cpp  matrix_exponential.hpp  (+3 more)
lib/Pll/src/: Makefile.am  alignment.c  avxLikelihood.c~  errcodes.h  evaluateGenericSpecial.c  evaluatePartialGenericSpecial.c  fastDNAparsimony.c  genericParallelization.c  globalVariables.h  hash.c  makenewzGenericSpecial.c  mem_alloc.h  mic_native.h  mic_native_aa.c  models.c  newick.c  newviewGenericSpecial.c  optimizeModel.c~  parsePartition.c  pll.h  (+10 more)
parameters/: params186.txt  params218.txt  params500.txt  params55.txt  paramsM2926.txt  paramsM510.txt
src/core/: Algorithm.cpp  Algorithm.h  Operator.cpp  Operator.h  Problem.cpp  Problem.h  Solution.cpp  Solution.h  SolutionSet.cpp  SolutionSet.h  SolutionType.cpp  SolutionType.h  Variable.cpp  Variable.h
src/main/: MO-PhyTree.cpp  MO-PhyTree.cpp~  MOCHC_main.cpp~  PhyloMOCHC_main.cpp~  mainMORPHY.cpp
src/metaheuristics/: MORPHY.cpp  MORPHY.h
src/problems/: Phylogeny.cpp  Phylogeny.h  Phylogeny.h~
src/util/: Distance.cpp  Distance.h  NonDominatedSolutionList.cpp  NonDominatedSolutionList.h  PermutationUtility.cpp  PermutationUtility.h  PseudoRandom.cpp  PseudoRandom.h  RandomGenerator.cpp  RandomGenerator.h  Ranking.cpp  Ranking.h
(+372 files in other folders)
