exampledir = $(docdir)/examples/PLL
# example_DATA = main.c Makefile.AVX Makefile.SSE3 Makefile.SSE3-PTHREADS Makefile.SSE3-MPI Makefile.AVX-PTHREADS Makefile.AVX-MPI Makefile.AVX.clang Makefile.SSE3.clang 
dist_example_DATA = main.c Makefile.AVX Makefile.SSE3 Makefile.SSE3-PTHREADS Makefile.SSE3-MPI Makefile.AVX-PTHREADS Makefile.AVX-MPI Makefile.AVX.clang Makefile.SSE3.clang 
